[gd_scene load_steps=3 format=2]

[ext_resource path="res://Resources/Themes/MainTheme.tres" type="Theme" id=1]
[ext_resource path="res://UI/AppearingHintLabels/AppearingHintLabels.gd" type="Script" id=2]

[node name="AppearingHintLabel" type="Node2D"]
script = ExtResource( 2 )

[node name="Label" type="RichTextLabel" parent="."]
margin_right = 163.0
margin_bottom = 56.0
theme = ExtResource( 1 )
text = "Нажми [Attack], чтобы
сломать бочки"
scroll_active = false

[node name="FloatingTween" type="Tween" parent="."]

[node name="TextTypingTween" type="Tween" parent="."]

[node name="AppearTween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
